--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=News
 APP_ENV=local
 APP_KEY=base64:6Rf7wski9PcPzHlGuHu9p7ys2zMFwjN7kV8oXwzTvjs=
 APP_DEBUG=true
@@ -28,14 +28,23 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
+# MAIL_DRIVER=mailgun
+
+
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=30fe7c5c5a0781
+MAIL_PASSWORD=0639d1ff556443
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="hello@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+
+# MAILGUN_DOMAIN=sandboxed4b8dd973424e49b1980b88a7d1a59c.mailgun.org
+# MAILGUN_SECRET=5243a7999214ec863fcc20c84e80aa24
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
